<resources>
    <string name="app_name">RentnDrive</string>
    <!-- Strings related to com.example.rentndrive.login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="title_activity_congrats">Congratulations</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_results">Results</string>


    <string name="country_prompt">Choose the Country</string>
    <string-array name="country_arrays">
        <item>-Any-</item>
        <item>Cyprus</item>
    </string-array>

    <string name="city_prompt">Choose the city</string>
    <string-array name="city_arrays">
        <item>-Any-</item>
        <item>Larnaca</item>
        <item>Nicosia</item>
        <item>Paphos</item>
        <item>Limassol</item>
        <item>Famagusta</item>
    </string-array>

    <string name="transmission_prompt">Choose transmission type</string>
    <string-array name="transmission_arrays">
        <item>-Any-</item>
        <item>Automatic</item>
        <item>Manual</item>
    </string-array>

    <string name="fuel_prompt">Choose fuel type</string>
    <string-array name="fuel_arrays">
        <item>-Any-</item>
        <item>Petrol</item>
        <item>Diesel</item>
        <item>Gas</item>
        <item>Hybrid</item>
        <item>Electric</item>
    </string-array>

    <string name="model_prompt">Choose a model</string>
    <string-array name="model_arrays">
        <item>-Any-</item>
    </string-array>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
